--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "react/no-unescaped-entities": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@next/next/no-page-custom-font": "off",
+    "@next/next/no-img-element": "off",
     "@emotion/jsx-import": "error",
     "@emotion/no-vanilla": "error",
     "@emotion/import-from-emotion": "error",
