--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "prettier": "^2.4.1",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
+  },
+  "resolutions": {
+    "@types/react": "<18.0.1",
+    "@types/react-dom": "<18.0.0"
   }
 }
