--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "eslint-typescript": "^1.1.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-messenger-chat-plugin": "^3.0.5"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
