--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
+    "@paypal/react-paypal-js": "^7.8.1",
     "eslint-typescript": "^1.1.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-messenger-chat-plugin": "^3.0.5"
+    "react-material-ui-carousel": "^3.4.2",
+    "react-messenger-chat-plugin": "^3.0.5",
+    "react-virtualized-auto-sizer": "^1.0.6",
+    "react-window": "^1.8.7"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
