--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": "./src"
+    "baseUrl": "src"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "scripts/fetchpacks.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*", "pages/**/*"],
   "exclude": ["node_modules"]
 }
