--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
-    "paths": {
-      "*": ["./src/*"]
-    }
+    "baseUrl": "src"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*", "pages/**/*"],
   "exclude": ["node_modules"]
