--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@paypal/react-paypal-js": "^7.8.1",
+    "axios": "^0.27.2",
     "eslint-typescript": "^1.1.0",
     "next": "latest",
     "react": "^17.0.2",
